<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.footballscores.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ballImgTeamA"
                    style="@style/ImageFootbal" />

                <TextView
                    style="@style/MainHeader"
                    android:text="@string/team_a" />

                <TextView
                    style="@style/SecondHeader"
                    android:text="@string/goals" />

                <TextView
                    android:id="@+id/textGoalsTeamA"
                    style="@style/Goals"
                    android:text="@string/zero" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addOneGoalTeamA"
                    android:text="@string/button_goal" />

                <TextView
                    style="@style/SecondHeader"
                    android:layout_marginTop="8dp"
                    android:text="@string/fouls" />

                <TextView
                    android:id="@+id/textFoalsTeamA"
                    style="@style/FoalsText"
                    android:text="@string/zero" />


                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addOneFoalTeamA"
                    android:text="@string/button_foul" />
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/divider_color" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ballImgTeamB"
                    style="@style/ImageFootbal" />

                <TextView
                    style="@style/MainHeader"
                    android:text="@string/team_b" />

                <TextView
                    style="@style/SecondHeader"
                    android:text="@string/goals" />

                <TextView
                    android:id="@+id/textGoalsTeamB"
                    style="@style/Goals"
                    android:text="@string/zero" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addOneGoalTeamB"
                    android:text="@string/button_goal" />

                <TextView
                    style="@style/SecondHeader"
                    android:layout_marginTop="8dp"
                    android:text="@string/fouls" />

                <TextView
                    android:id="@+id/textFoalsTeamB"
                    style="@style/FoalsText"
                    android:text="@string/zero"

                    />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addOneFoalTeamB"
                    android:text="@string/button_foul" />
            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/ResetButton"
            android:onClick="resetAll"
            android:text="@string/button_reset" />
    </LinearLayout>

</ScrollView>
